2009-05-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-dialog.h:
	 Use new profile widget in advrename dialog

2009-05-18  Christopher Zimmermann  <madroach@zakweb.de>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	Support for single-click open mode

2009-05-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-profile-component.cc:
	advrename profiles: properly clear regex model

2009-05-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-make-copy-dialog.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	typo: filename -> file name

2009-05-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-profile-component.cc:
	advrename profiles: be more conformant with HIG

2009-05-11  Piotr Eljasiak  <epiotr@use.pl>

	* tests/gviewer/search_dlg_test.c:
	* tests/gviewer/viewerwindow.c:
	Replaced deprecated gnome_init() with gnome_program_init()

2009-05-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Replaced deprecated gtk_entry_set_position() with gtk_editable_set_position()

2009-05-07  Christopher Zimmermann  <madroach@zakweb.de>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-options-dialog.cc:
	Allow gentoo like left-click behaviour

2009-05-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.h:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-notebook.h:
	* src/gnome-cmd-profile-component.h:
	Properly destroy object in delete operator

2009-04-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-profile-component.cc:
	* src/gnome-cmd-profile-component.h:
	advrename profiles: added convert_case() and trim_blanks() methods

2009-04-28  Piotr Eljasiak  <epiotr@use.pl>
